--- a/src/assets/components/ui/fb-alert.scss
+++ b/src/assets/components/ui/fb-alert.scss
@@ -8,28 +8,28 @@ $alert-font-family:                   $font-family-base;
 $alert-padding:                       0.5rem 1rem;
 $alert-border-radius:                 3px;
 
-$alert-default-color:                 $brand-default-contrast;
-$alert-default-bg:                    $brand-default;
+$alert-default-color:                 $color-default-contrast;
+$alert-default-bg:                    $color-default;
 $alert-default-border:                $alert-default-bg;
 
-$alert-primary-color:                 $brand-primary-contrast;
-$alert-primary-bg:                    $brand-primary;
+$alert-primary-color:                 $color-primary-contrast;
+$alert-primary-bg:                    $color-primary;
 $alert-primary-border:                $alert-primary-bg;
 
-$alert-success-color:                 $brand-success-contrast;
-$alert-success-bg:                    $brand-success;
+$alert-success-color:                 $color-success-contrast;
+$alert-success-bg:                    $color-success;
 $alert-success-border:                $alert-success-bg;
 
-$alert-info-color:                    $brand-info-contrast;
-$alert-info-bg:                       $brand-info;
+$alert-info-color:                    $color-info-contrast;
+$alert-info-bg:                       $color-info;
 $alert-info-border:                   $alert-info-bg;
 
-$alert-warning-color:                 $brand-warning-contrast;
-$alert-warning-bg:                    $brand-warning;
+$alert-warning-color:                 $color-warning-contrast;
+$alert-warning-bg:                    $color-warning;
 $alert-warning-border:                $alert-warning-bg;
 
-$alert-danger-color:                  $brand-danger-contrast;
-$alert-danger-bg:                     $brand-danger;
+$alert-danger-color:                  $color-danger-contrast;
+$alert-danger-bg:                     $color-danger;
 $alert-danger-border:                 $alert-danger-bg;
 
 $alert-icon-padding:                  $padding-xs;
