--- a/src/assets/components/ui/fb-card-box.scss
+++ b/src/assets/components/ui/fb-card-box.scss
@@ -10,5 +10,5 @@ $card-padding-horizontal:             1rem !default;
 $card-padding-vertical:               1rem !default;
 $card-padding:                        $card-padding-vertical $card-padding-horizontal;
 
-$card-header-background-color:        $brand-primary;
-$card-header-color:                   $brand-primary-contrast;
+$card-header-background-color:        $color-primary;
+$card-header-color:                   $color-primary-contrast;
