--- a/src/assets/components/ui/fb-component-loading-error.scss
+++ b/src/assets/components/ui/fb-component-loading-error.scss
@@ -7,7 +7,7 @@
 
 $loader-font-family:                  $font-family-base;
 
-$loader-error-color:                  $brand-danger;
+$loader-error-color:                  $color-danger;
 
 $loader-padding-sm:                   $padding-sm;
 $loader-padding-md:                   $padding-md;
