--- a/src/assets/components/ui/fb-confirmation-window.scss
+++ b/src/assets/components/ui/fb-confirmation-window.scss
@@ -7,9 +7,9 @@ $confirmation-heading-line-height:    $headings-line-height;
 $confirmation-heading-margin-top:     $line-height-computed;
 $confirmation-heading-margin-bottom:  $line-height-computed / 2;
 
-$confirmation-variant-default:        $brand-default;
-$confirmation-variant-primary:        $brand-primary;
-$confirmation-variant-success:        $brand-success;
-$confirmation-variant-info:           $brand-info;
-$confirmation-variant-warning:        $brand-warning;
-$confirmation-variant-danger:         $brand-danger;
+$confirmation-variant-default:        $color-default;
+$confirmation-variant-primary:        $color-primary;
+$confirmation-variant-success:        $color-success;
+$confirmation-variant-info:           $color-info;
+$confirmation-variant-warning:        $color-warning;
+$confirmation-variant-danger:         $color-danger;
