--- a/src/assets/components/ui/fb-result-err.scss
+++ b/src/assets/components/ui/fb-result-err.scss
@@ -1,5 +1,5 @@
 @import "../../variables/colors";
 @import "../../variables/sizes";
 
-$color:                               $brand-danger;
+$color:                               $color-danger;
 $icon-width:                          $icon-height-lg;
