--- a/src/assets/components/form/fb-checkbox.scss
+++ b/src/assets/components/form/fb-checkbox.scss
@@ -7,19 +7,19 @@ $checkbox-font-family:                          $font-family-base;
 
 $checkbox-indicator-size:                       1.5rem !default;
 
-$checkbox-padding:                              0 2rem 0 sum($checkbox-indicator-size, 1rem);
-
 $checkbox-indicator-bg-color:                   $white;
 $checkbox-indicator-border-color:               $gray-lighter;
-$checkbox-indicator-checked-bg-color:           $brand-primary;
-$checkbox-indicator-checked-border-color:       $brand-primary;
+$checkbox-indicator-checked-bg-color:           $color-primary;
+$checkbox-indicator-checked-border-color:       $color-primary;
 $checkbox-indicator-disabled-bg-color:          $gray-lighter;
 
 $checkbox-indicator-margin:                     $margin-sm;
 $checkbox-indicator-font-size:                  $font-size-base;
 $checkbox-indicator-line-height:                $checkbox-indicator-size;
 
-$checkbox-error-color:                          $brand-danger;
+$checkbox-label-padding:                        0 0 0 sum($checkbox-indicator-size, 1rem);
+
+$checkbox-error-color:                          $color-danger;
 
 @mixin checkbox-indicator-radius {
   @include border-radius(2px);
