--- a/src/assets/components/form/fb-input.scss
+++ b/src/assets/components/form/fb-input.scss
@@ -12,8 +12,8 @@ $input-color-readonly:                $gray-light;
 $input-border-color:                  $gray-lighter;
 $input-border-color-focus:            #66afe9;
 
-$input-border-color-error:            $brand-danger;
-$input-color-error:                   $brand-danger;
+$input-border-color-error:            $color-danger;
+$input-color-error:                   $color-danger;
 
 $input-size-font-size-sm:             1.3rem;
 $input-size-line-height-sm:           2.5rem;
@@ -42,5 +42,5 @@ $input-border-radius-lg:              4px;
 }
 
 @mixin input-error-focus-shadow {
-  @include box-shadow(inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 6px lighten($brand-danger, 20%));
+  @include box-shadow(inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 6px lighten($color-danger, 20%));
 }
