--- a/src/assets/components/form/fb-label.scss
+++ b/src/assets/components/form/fb-label.scss
@@ -8,7 +8,7 @@ $label-font-family:                   $font-family-base;
 $label-font-weight:                   $font-weight-bold;
 
 $label-margin:                        0 0 $margin-xs 0;
-$label-required-color:                $brand-primary;
+$label-required-color:                $color-primary;
 
 $label-font-size:                     $font-size-base;
 $label-large-font-size:               $font-size-large;
