--- a/src/assets/components/form/fb-text-area.scss
+++ b/src/assets/components/form/fb-text-area.scss
@@ -16,7 +16,7 @@ $input-border-radius-sm:              2px;
 $input-border-radius-md:              3px;
 $input-border-radius-lg:              4px;
 
-$input-border-color-error:            $brand-danger;
+$input-border-color-error:            $color-danger;
 
 @mixin textarea-border-radius($border-radius) {
   @include border-radius($border-radius);
@@ -27,5 +27,5 @@ $input-border-color-error:            $brand-danger;
 }
 
 @mixin textarea-error-focus-shadow {
-  @include box-shadow(inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 6px lighten($brand-danger, 20%));
+  @include box-shadow(inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 6px lighten($color-danger, 20%));
 }
