--- a/src/assets/components/layout/fb-navigation.scss
+++ b/src/assets/components/layout/fb-navigation.scss
@@ -24,5 +24,5 @@ $screen-tablet-min:                   $screen-sm-min;
 $screen-desktop-max:                  $screen-md-max;
 
 @mixin flex-item {
-  @include flexRow;
+  @include flexRow(nowrap);
 }
