--- a/src/assets/components/ui/fb-icon-with-child.scss
+++ b/src/assets/components/ui/fb-icon-with-child.scss
@@ -12,23 +12,23 @@ $child-icon-size-lg:                  2rem;
 
 $main-icon-color:                     $text-color;
 
-$child-icon-default-color:            $brand-default-contrast;
-$child-icon-default-bg:               $brand-default;
+$child-icon-default-color:            $color-default-contrast;
+$child-icon-default-bg:               $color-default;
 
-$child-icon-primary-color:            $brand-primary-contrast;
-$child-icon-primary-bg:               $brand-primary;
+$child-icon-primary-color:            $color-primary-contrast;
+$child-icon-primary-bg:               $color-primary;
 
-$child-icon-success-color:            $brand-success-contrast;
-$child-icon-success-bg:               $brand-success;
+$child-icon-success-color:            $color-success-contrast;
+$child-icon-success-bg:               $color-success;
 
-$child-icon-danger-color:             $brand-danger-contrast;
-$child-icon-danger-bg:                $brand-danger;
+$child-icon-danger-color:             $color-danger-contrast;
+$child-icon-danger-bg:                $color-danger;
 
-$child-icon-warning-color:            $brand-warning-contrast;
-$child-icon-warning-bg:               $brand-warning;
+$child-icon-warning-color:            $color-warning-contrast;
+$child-icon-warning-bg:               $color-warning;
 
-$child-icon-info-color:               $brand-info-contrast;
-$child-icon-info-bg:                  $brand-info;
+$child-icon-info-color:               $color-info-contrast;
+$child-icon-info-bg:                  $color-info;
 
 @mixin child-shadow {
   @include box-shadow(0 0 0 2px #fff);
