--- a/src/assets/components/ui/fb-modal-window.scss
+++ b/src/assets/components/ui/fb-modal-window.scss
@@ -15,10 +15,12 @@ $modal-overlay-bg-transparent:        rgba(255, 255, 255, 0.5);
 $modal-footer-padding:                $padding-md;
 
 $modal-content-border-radius:         4px;
-$modal-content-bg-color:              $white;
+$modal-content-bg-color:              $bg-color-body;
+
+$modal-footer-border-color:           $gray-lighter;
 
 $modal-top-offset:                    7rem;
-$modal-bottom-offset:                 7rem;
+$modal-bottom-offset:                 1rem;
 $modal-top-offset-phone:              1rem;
 $modal-bottom-offset-phone:           1rem;
 $modal-top-offset-tablet:             1rem;
@@ -31,10 +33,14 @@ $modal-size-lg:                       90rem;
 $modal-loader-width:                  25rem;
 $modal-loader-bg-color:               #fff;
 
-$logo-color-dark:                     #444;
-$logo-color-primary:                  #d9230f;
+$logo-color-primary:                  $color-brand-primary;
+$logo-color-secondary:                $color-brand-secondary;
 
 $screen-tablet-min:                   $screen-sm-min;
+
+@mixin modal-body-flex {
+  @include flexColumn;
+}
 
 @mixin modal-content-shadow {
   @include box-shadow(0 3px 9px rgba(0, 0, 0, 0.5));
