--- a/src/assets/components/ui/fb-result-ok.scss
+++ b/src/assets/components/ui/fb-result-ok.scss
@@ -1,5 +1,5 @@
 @import "../../variables/colors";
 @import "../../variables/sizes";
 
-$color:                               $brand-success;
+$color:                               $color-success;
 $icon-width:                          $icon-height-lg;
