--- a/src/assets/mixins/utilities.scss
+++ b/src/assets/mixins/utilities.scss
@@ -8,19 +8,21 @@
   @return $result;
 }
 
-@mixin flexRow {
+@mixin flexRow($wrap: wrap) {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -ms-flex-wrap: wrap;
-  flex-wrap: wrap;
+  -ms-flex-wrap: $wrap;
+  flex-wrap: $wrap;
   flex-direction: row;
 }
 
-@mixin flexColumn {
+@mixin flexColumn($wrap: wrap) {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -ms-flex-wrap: $wrap;
+  flex-wrap: $wrap;
   flex-direction: column;
 }
 
