--- a/src/assets/variables/colors.scss
+++ b/src/assets/variables/colors.scss
@@ -7,41 +7,45 @@ $gray:                                  #777;
 $gray-light:                            #808080;
 $gray-lighter:                          #ddd;
 
-$brand-primary:                         #d9230f;
-$brand-primary-contrast:                #fff;
-$brand-success:                         #469408;
-$brand-success-contrast:                #fff;
-$brand-info:                            #029acf;
-$brand-info-contrast:                   #fff;
-$brand-warning:                         #9b479f;
-$brand-warning-contrast:                #fff;
-$brand-danger:                          #d9831f;
-$brand-danger-contrast:                 #fff;
-$brand-default:                         #474949;
-$brand-default-contrast:                #fff;
+$color-brand-primary:                   #d9230f;
+$color-brand-secondary:                 #444;
 
-$body-bg:                               #fcfcfc;
+$color-primary:                         #d9230f;
+$color-primary-contrast:                #fff;
+$color-success:                         #469408;
+$color-success-contrast:                #fff;
+$color-info:                            #029acf;
+$color-info-contrast:                   #fff;
+$color-warning:                         #9b479f;
+$color-warning-contrast:                #fff;
+$color-danger:                          #d9831f;
+$color-danger-contrast:                 #fff;
+$color-default:                         #474949;
+$color-default-contrast:                #fff;
+
+$bg-color-body:                         #fcfcfc;
+$bg-color-content:                      #fff;
 
 $text-color:                            $gray;
 
-$link-color:                            $brand-primary;
-$link-hover-color:                      $brand-primary;
+$link-color:                            $color-primary;
+$link-hover-color:                      $color-primary;
 $link-hover-decoration:                 underline;
 
 $hr-border:                             $gray-lighter;
 
-$state-success-text:                    $brand-success;
+$state-success-text:                    $color-success;
 $state-success-bg:                      #c8e6c9;
 $state-success-border:                  darken(adjust-hue($state-success-bg, -10), 5%);
 
-$state-info-text:                       $brand-info;
+$state-info-text:                       $color-info;
 $state-info-bg:                         #b3e5fc;
 $state-info-border:                     darken(adjust-hue($state-info-bg, -10), 7%);
 
-$state-warning-text:                    $brand-warning;
+$state-warning-text:                    $color-warning;
 $state-warning-bg:                      #e1bee7;
 $state-warning-border:                  darken(adjust-hue($state-warning-bg, -10), 5%);
 
-$state-danger-text:                     $brand-danger;
+$state-danger-text:                     $color-danger;
 $state-danger-bg:                       #ffe0b2;
 $state-danger-border:                   darken(adjust-hue($state-danger-bg, -10), 5%);
