--- a/src/components/layout/FbUserMenu/Item/index.scss
+++ b/src/components/layout/FbUserMenu/Item/index.scss
@@ -3,14 +3,20 @@
 .fb-layout-user-menu-item {
   &__container {
     color: $menu-color;
-    padding: $menu-item-padding;
+    padding: 0;
     line-height: $menu-item-line-height;
+
+    > span {
+      padding: $menu-item-padding;
+      width: 100%;
+      text-align: left;
+    }
 
     > a,
     > button {
       background-color: transparent;
       background-image: none;
-      padding: 0.25rem 0;
+      padding: $menu-item-padding;
       margin: 0;
       border: none;
       outline: none;
@@ -18,12 +24,16 @@
       font-weight: normal;
       color: $menu-item-color;
       white-space: nowrap;
+      width: 100%;
+      text-align: left;
 
       &:hover,
       &:focus {
-        text-decoration: none;
-        color: $menu-item-active-color;
-        background-color: $menu-item-active-background-color;
+        @media (hover: hover) and (pointer: fine) {
+          text-decoration: none;
+          color: $menu-item-active-color;
+          background-color: $menu-item-active-background-color;
+        }
       }
     }
   }
