--- a/src/components/ui/FbButton/index.scss
+++ b/src/components/ui/FbButton/index.scss
@@ -31,8 +31,10 @@
   &:hover,
   &:focus,
   &.focus {
-    color: $btn-default-color;
-    text-decoration: none;
+    @media (hover: hover) and (pointer: fine) {
+      color: $btn-default-color;
+      text-decoration: none;
+    }
   }
 
   &:active,
@@ -68,11 +70,6 @@
 
     .fb-ui-button {
       &__inner {
-        &-icon {
-          height: $btn-icon-lg-height;
-          font-size: $btn-icon-lg-height;
-        }
-
         &-label {
           padding-left: $btn-padding-lg-horizontal-icon;
         }
@@ -85,11 +82,6 @@
 
     .fb-ui-button {
       &__inner {
-        &-icon {
-          height: $btn-icon-md-height;
-          font-size: $btn-icon-md-height;
-        }
-
         &-label {
           padding-left: $btn-padding-md-horizontal-icon;
         }
@@ -102,11 +94,6 @@
 
     .fb-ui-button {
       &__inner {
-        &-icon {
-          height: $btn-icon-sm-height;
-          font-size: $btn-icon-sm-height;
-        }
-
         &-label {
           padding-left: $btn-padding-sm-horizontal-icon;
         }
