--- a/src/components/ui/FbComponentLoading/index.scss
+++ b/src/components/ui/FbComponentLoading/index.scss
@@ -26,10 +26,7 @@
 
       .fb-ui-component-loading {
         &__icon {
-          -webkit-box-flex: 0;
-          -ms-flex: 0 0 $loader-icon-size-lg;
-          flex: 0 0 $loader-icon-size-lg;
-          max-width: $loader-icon-size-lg;
+          @include flexBoxWidth($loader-icon-size-lg);
         }
 
         &__text {
@@ -45,10 +42,7 @@
 
       .fb-ui-component-loading {
         &__icon {
-          -webkit-box-flex: 0;
-          -ms-flex: 0 0 $loader-icon-size-md;
-          flex: 0 0 $loader-icon-size-md;
-          max-width: $loader-icon-size-md;
+          @include flexBoxWidth($loader-icon-size-md);
         }
 
         &__text {
@@ -64,10 +58,7 @@
 
       .fb-ui-component-loading {
         &__icon {
-          -webkit-box-flex: 0;
-          -ms-flex: 0 0 $loader-icon-size-sm;
-          flex: 0 0 $loader-icon-size-sm;
-          max-width: $loader-icon-size-sm;
+          @include flexBoxWidth($loader-icon-size-sm);
         }
 
         &__text {
