--- a/src/assets/components/ui/fb-loading-box.scss
+++ b/src/assets/components/ui/fb-loading-box.scss
@@ -1,6 +1,7 @@
 @import "../../variables/layout";
 @import "../../variables/screen";
 @import "../../variables/texts";
+@import "../../mixins/utilities";
 
 $loading-font-family:                 $font-family-base;
 $loading-padding:                     3rem;
@@ -11,3 +12,7 @@ $loading-content-margin:              $margin-sm;
 $loading-font-size-sm:                $font-size-base;
 $loading-font-size-md:                $font-size-base;
 $loading-font-size-lg:                $font-size-base;
+
+@mixin flex-icon {
+  @include flexRow(nowrap);
+}
