--- a/src/components/ui/FbLoadingBox/index.scss
+++ b/src/components/ui/FbLoadingBox/index.scss
@@ -40,6 +40,10 @@
 
   &__icon {
     margin-bottom: $loading-icon-margin;
+    align-items: center;
+    justify-content: center;
+
+    @include flex-icon;
   }
 
   &__content {
