--- a/src/assets/components/form/fb-radio-button.scss
+++ b/src/assets/components/form/fb-radio-button.scss
@@ -9,7 +9,7 @@ $radio-indicator-size:                      1.5rem !default;
 
 $radio-indicator-bg-color:                  $white;
 $radio-indicator-border-color:              $gray-lighter;
-$radio-indicator-checked-bg-color:          $color-primary;
+$radio-indicator-checked-bg-color:          $color-primary-contrast;
 $radio-indicator-checked-border-color:      $color-primary;
 $radio-indicator-disabled-bg-color:         $gray-lighter;
 
@@ -17,7 +17,7 @@ $radio-indicator-margin:                    $margin-sm;
 $radio-indicator-font-size:                 $font-size-base;
 $radio-indicator-line-height:               $radio-indicator-size;
 
-$radio-label-padding:                       0 0 0 sum($radio-indicator-size, 1rem);
+$radio-label-padding:                       0 $padding-sm 0 sum($radio-indicator-size, 1rem);
 
 $radio-error-color:                         $color-danger;
 
