--- a/src/assets/components/ui/fb-media-item.scss
+++ b/src/assets/components/ui/fb-media-item.scss
@@ -3,7 +3,7 @@
 
 $media-font-family:                   $font-family-base;
 $media-font-size:                     $font-size-base;
-$media-heading-margin:                1rem 0 0 0;
+$media-heading-margin:                0;
 $media-heading-font-size:             2.5rem;
 $media-heading-line-height:           2.5rem;
 
