--- a/src/assets/components/layout/fb-footer.scss
+++ b/src/assets/components/layout/fb-footer.scss
@@ -1,12 +1,21 @@
+@import "../../variables/colors";
+@import "../../variables/layout";
+@import "../../variables/texts";
 @import "../../variables/screen";
 
-$z-index:                             1000 !default;
+$z-index:                             $zindex-layout-footer;
 
-$footer-padding:                      0 1.5rem;
-$footer-color:                        #777;
-$footer-background-color:             darken(#fcfcfc, 5%);
-$footer-border-color:                 darken(#fcfcfc, 10%);
+$footer-font-family:                  $font-family-base;
+$footer-font-size:                    $font-size-base;
+
+$footer-padding:                      0 $padding-md;
+$footer-color:                        $gray;
+$footer-background-color:             darken($bg-color-body, 5%);
+$footer-border-color:                 darken($bg-color-body, 10%);
 $footer-height:                       3rem;
 $footer-line-height:                  $footer-height;
+
+$footer-link-color:                   $color-default;
+$footer-link-hover-decoration:        underline;
 
 $screen-phone-max:                    $screen-xs-max;
