--- a/src/assets/components/ui/fb-items-container.scss
+++ b/src/assets/components/ui/fb-items-container.scss
@@ -9,12 +9,12 @@ $container-margin:                              1.5rem 0 0 0;
 $heading-container-height:                      3.8rem;
 $heading-container-border-color:                #ddd;
 
-$heading-padding:                               0 0 0 1rem;
+$heading-padding:                               0;
 $heading-font-size:                             $font-size-h4;
 $heading-line-height:                           3.8rem;
 $heading-small-color:                           $gray-light;
 
-$heading-buttons-padding:                       0 1rem 0 0;
+$heading-buttons-padding:                       0;
 $heading-buttons-button-min-width:              3.5rem;
 $heading-buttons-button-height:                 3rem;
 $heading-buttons-button-padding:                0 1rem;
